# IdeaGoldRepository

./: README.md  Specs, always read before advancing  app.py  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: archive.txt
model/: __init__.py  availability.py  benchmark.py  benchmarking.py  calendar_pdf.py  closures.py  coloring.py  config_io.py  data_models.py  demo_data.py  exporters.py  fairness.py  ics.py  ledger.py  names.py  nf_blocks.py  night_float.py  optimiser.py  pandas_stub.py  points.py  reductions.py  solve_report.py  utils.py  validation.py  weights.py
scripts/: benchmark.py  fairness_audit.py  smoke_app.py
tests/: conftest.py  test_app.py  test_availability.py  test_avoid_pairs.py  test_benchmark.py  test_benchmarking.py  test_blackouts.py  test_charts.py  test_closures.py  test_coloring.py  test_config_io.py  test_editors.py  test_exporters.py  test_fairness.py  test_fairness_outcomes.py  test_ics.py  test_ledger.py  test_names.py  test_night_float.py  test_optimiser.py  test_patterns.py  test_points.py  test_preferences.py  test_reductions.py  test_scheduler.py  test_solve_progress.py  test_solve_report.py  test_theme.py  test_uploads.py  test_utils.py  test_validation.py  test_weights.py
ui/: __init__.py  charts.py  config_tabs.py  diagnostics.py  editors.py  ledger_panel.py  patterns.py  results.py  state.py  theme.py  uploads.py
