[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-gold-scheduler"
version = "0.1.0"
description = "Provably fair on-call scheduling with OR-Tools CP-SAT and a Streamlit UI"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33,<2",
    "pandas>=2.0,<4",
    "ortools>=9.10,<10",
    "openpyxl>=3.1,<4",
    "reportlab>=4.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov",
    "ruff",
    "mypy>=1.10",
    "playwright",
]

[tool.setuptools]
# app.py stays a top-level Streamlit entry script; only the libraries install.
packages = ["model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["model"]
# ortools and streamlit ship no type stubs; pandas' are optional.
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Keep ruff's default rule set (pyflakes `F` + the high-signal pycodestyle
# `E` rules); it flags real problems without nitpicking line length.

[tool.ruff.lint.per-file-ignores]
# Tests use the `import sys, os` + sys.path bootstrap idiom and stub lambdas.
"tests/*" = ["E401", "E402", "E731"]
# optimiser.py imports its own modules after the OR-Tools fallback shim block.
"model/optimiser.py" = ["E402"]
