[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-gold-scheduler"
version = "0.1.0"
description = "Provably fair on-call scheduling with OR-Tools CP-SAT and a Streamlit UI"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.58,<2",
    "pandas>=2.0,<4",
    "ortools>=9.10,<10",
    "openpyxl>=3.1,<4",
    "reportlab>=4.0,<5",
    "altair>=5.0,<7",
    "arabic-reshaper>=3.0,<4",
    "python-bidi>=0.6,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov",
    "ruff",
    "mypy>=1.10",
    "playwright",
]

[tool.setuptools]
# app.py stays a top-level Streamlit entry script; only the libraries install.
packages = ["model", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["model"]
# ortools and streamlit ship no type stubs; pandas' are optional.
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pyflakes `F` plus the high-signal pycodestyle `E` rules: real problems, no
# nitpicking about line length or import style.
#
# Selected EXPLICITLY rather than inherited from ruff's defaults. CI installs
# ruff unpinned, and 0.16.0 widened the default set (pyupgrade, isort,
# flake8-blind-except, …) — which turned the whole repository red overnight
# without a line of code changing. Naming the rules keeps the gate stable
# across ruff releases; widening it is then a deliberate, reviewable change
# rather than something a dependency does to us.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Tests use the `import sys, os` + sys.path bootstrap idiom and stub lambdas.
"tests/*" = ["E401", "E402", "E731"]
# optimiser.py imports its own modules after the OR-Tools fallback shim block.
"model/optimiser.py" = ["E402"]
